--- a/web/viewer.css
+++ b/web/viewer.css
@@ -30,7 +30,7 @@ html {
 body {
   height: 100%;
   width: 100%;
-  background-color: #404040;
+  background-color: #f4f4f4;
   background-image: url(images/texture.png);
 }
 
